--- a/daily-challenge.html
+++ b/daily-challenge.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-       /*Une seule boucle
+       //Une seule boucle
             for(let j= 0 ; j <=5  ; j++)
            {
             let etoil = " * ";
@@ -17,7 +17,7 @@
            } 
           
 
-           //*Deux boucles
+        //*Deux boucles
            for (let i = 0; i<5; i++)
            {
             let vari = ""
